# exam_proctoring

./: .vercelignore  DEPLOYMENT_SUMMARY.md  RENDER_DEPLOYMENT.md  RENDER_QUICK_START.md  app.py  pyproject.toml  render.yaml  requirements.txt  run.bat  run.sh  vercel.json
ai_modules/: face_detection.py  gaze_tracking.py  object_detection.py
api/: index.py
backend/: app.py  camera_analyzer.py  event_logger.py  integrity_engine.py
database/: exam_logs.db
frontend/: dashboard.html  exam.html  login.html
static/css/: main.css
static/js/: examguard.js  proctor.js
