[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "examguard"
version = "1.0.0"
description = "AI-Powered Exam Proctoring System"
requires-python = ">=3.8"
dependencies = [
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "opencv-python==4.8.1.78",
    "mediapipe==0.10.30",
    "numpy==2.0.0",
    "Pillow>=10.0.0"
]

[project.scripts]
app = "app:app"
